MZ-34 added ICacheService.Delete(); formatting home

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Index.cshtml
@@ -33,7 +33,7 @@
                     .Init(ajax => ajax.Action("GetAuctions", "Auctions", new { search = Model.Search }))
     .Columns(columns =>
     {
-        columns.Bound(i => i.Product.Name).Title("Product");
+        columns.Bound(i => i.Title).Title("Title");
         columns.Bound(i => i.Status).ClientTemplate("#= getLabel(data) #");
         columns.Bound(i => i.StartUtc).Format("{0:dd/MM/yyyy HH:mm}").Title("Start");
         columns.Bound(i => i.Duration).Format("{0} minutes");
