--- a/src/Mzayad.Web/Content/site-layout.css
+++ b/src/Mzayad.Web/Content/site-layout.css
@@ -40,35 +40,42 @@
   column-count: 2;
 }
 #auction-list > li .auction-status {
+  position: relative;
+  display: table;
+  border-collapse: separate;
   text-align: center;
 }
 #auction-list > li .auction-status .auction-status-label,
 #auction-list > li .auction-status .auction-status-details {
-  position: relative;
-  float: left;
+  display: table-cell;
   padding: 12px;
   font-size: 1.8rem;
   border: 1px solid #dbdbdb;
   border-left: none;
 }
 #auction-list > li .auction-status .auction-status-label {
-  min-width: 150px;
+  width: 1%;
+  white-space: nowrap;
+  vertical-align: middle;
   color: white;
 }
-#auction-list > li .auction-status .status-closed > .auction-status-label {
-  background-color: #d9a300;
-  border-color: #d9a300;
-}
-#auction-list > li .auction-status .status-live > .auction-status-label {
-  background-color: #d9a300;
-  border-color: #d9a300;
-}
-#auction-list > li .auction-status .status-upcoming > .auction-status-label {
-  background-color: #d9a300;
-  border-color: #d9a300;
-}
 #auction-list > li .auction-status .auction-status-details {
+  position: relative;
+  float: left;
+  z-index: 2;
   width: 100%;
+}
+#auction-list > li .auction-status.status-closed > .auction-status-label {
+  background-color: #d9a300;
+  border-color: #d9a300;
+}
+#auction-list > li .auction-status.status-live > .auction-status-label {
+  background-color: #008c00;
+  border-color: #008c00;
+}
+#auction-list > li .auction-status.status-upcoming > .auction-status-label {
+  background-color: #d9a300;
+  border-color: #d9a300;
 }
 #auction-list > li .upcoming-date {
   padding: 25px;
