--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -56,8 +56,6 @@
 
 </style>
 
-<a href="/home/signalr">SignalR</a>
-
 <div class="jumbotron">
     @*<div class="mz-wrapper hidden-sm">
         <div class="mz mz-m wow fadeInDown" data-wow-delay="1s"></div>
@@ -82,7 +80,7 @@
 <ul id="auction-list" class="list-unstyled">
     @foreach (var auction in Model.Auctions)
     {
-        <li>
+        <li class="auction" data-auction-id="@auction.AuctionId">
             <div class="row">
                 <div class="col-md-8 col-sm-6">
                     <div class="auction-details">
@@ -109,10 +107,18 @@
                     {
                         <div class="auction-status status-live">
                             <div class="auction-status-label">Live</div>
-                            <div class="auction-status-details" data-auction-id="@auction.AuctionId">
-                                <button type="button" class="submit-bid" data-auction-id="@auction.AuctionId">Bid</button>
-                                Time left: <span class="time-left"></span> seconds
-                                Last bid: KD <span class="last-bid"></span>
+                            <div class="auction-status-details">
+                                @if (Request.IsAuthenticated)
+                                {
+                                    <button type="button" class="btn btn-default submit-bid">Bid</button>
+                                }
+                                else
+                                {
+                                    <a class="btn btn-default" href="@Url.Action("SignIn", "Account")">Bid</a>
+                                }
+
+                                Time left: <span class="time-left"></span> seconds.
+                                <span class="last-bid"></span>
                             </div>
                         </div>
                     }
@@ -145,21 +151,38 @@
                 var auctionIds = @JsonConvert.SerializeObject(Model.Auctions.Select(i => i.AuctionId));
                 var auctionHub = $.connection.auctionHub;
 
-                var bidStatuses = $(".bid-status");
+                var auctionDetails = [];
+                
+                $(".auction").each(function() {
+                    var $this = $(this);
+                    auctionDetails.push({
+                        auctionId: $this.data("auctionId"),
+                        timeLeft: $this.find(".time-left"),
+                        lastBid: $this.find(".last-bid")
+                    });
+                });
 
                 auctionHub.client.updateAuctions = function (results) {
                     var auctions = $.parseJSON(results);
-                    for (var i = 0; i < auctions.length; ++i) {
+                    for (var i = 0, len = auctions.length; i < len; ++i) {
                         var auction = auctions[i];
-
-                        var statusDisplay = $(".auction-status-details[data-auction-id=" + auction.id + "]");
-                        statusDisplay.find(".time-left").text(auction.t);
-                        statusDisplay.find(".last-bid").text(auction.a + " " + (auction.u || ""));
-
+                        var auctionDetail = getAuctionDetail(auction.id);
+                        auctionDetail.timeLeft.text(auction.t);
+                        if (auction.a) {
+                            auctionDetail.lastBid.text("KD " + auction.a + " by " + auction.u + ".");
+                        }
                     }
                 };
 
-                $.connection.hub.logging = true;
+                var getAuctionDetail = function(auctionId) {
+                    for (var i = 0, len = auctionDetails.length; i < len; i++) {
+                        if (auctionDetails[i].auctionId === auctionId)
+                            return auctionDetails[i];
+                    }
+                    return null;
+                };
+
+                //$.connection.hub.logging = true;
                 $.connection.hub.start().done(function() {
                     auctionHub.server.initAuctions(auctionIds).done(function (results) {
                         console.log(results);
@@ -168,7 +191,8 @@
 
                 $(".submit-bid").on("click", function() {
                     var $this = $(this);
-                    var auctionId = $this.data("auctionId");        
+                    var parent = $this.closest(".auction");
+                    var auctionId = parent.data("auctionId");        
                     auctionHub.server.submitBid(auctionId);
                 });
 
