MZ-34 updated AuctionHandler to accept IDataContextFactory

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -182,7 +182,7 @@
                     return null;
                 };
 
-                //$.connection.hub.logging = true;
+                $.connection.hub.logging = true;
                 $.connection.hub.start().done(function() {
                     auctionHub.server.initAuctions(auctionIds).done(function (results) {
                         console.log(results);
