MZ-34 added Bid entity and db migrations

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
                         var auctionDetail = getAuctionDetail(auction.id);
                         auctionDetail.timeLeft.text(auction.t);
                         if (auction.a) {
-                            auctionDetail.lastBid.text("KD " + auction.a + " by " + auction.u + ".");
+                            auctionDetail.lastBid.text("KD " + auction.a + " by " + auction.u);
                         }
                     }
                 };
