MZ-34 removed auction caching from homepage; added closed auctions to home

--- a/src/Mzayad.Web/Content/site-layout.css
+++ b/src/Mzayad.Web/Content/site-layout.css
@@ -73,6 +73,9 @@
   background-color: #008c00;
   border-color: #008c00;
 }
+#auction-list > li .auction-status.status-live > .auction-status-details {
+  display: none;
+}
 #auction-list > li .auction-status.status-upcoming > .auction-status-label {
   background-color: #d9a300;
   border-color: #d9a300;
