--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -32,10 +32,11 @@
         }
 
         .auction-details {
-            margin-bottom: 20px;
-            border-bottom: 2px solid #dbdbdb;
 
-            .auction-detail-item {
+            .auction-title,
+            .auction-status,
+            .auction-specs,
+            .auction-price {
                 margin-bottom: 20px;
             }
 
@@ -56,21 +57,26 @@
             display: table;
             border-collapse: separate;
             text-align: center;
+            border: 2px solid;
+            width: 100%;
+
 
             .auction-status-label,
             .auction-status-details {
                 display: table-cell;   
                 padding: 12px;
                 font-size: 1.8rem;
-                border: 1px solid #dbdbdb;
-                border-left: none;
             }
 
             .auction-status-label {     
-                width: 1%;
+                width: 150px;
                 white-space: nowrap;
                 vertical-align: middle;    
                 color: white;
+
+                i.fa {
+                    font-weight: normal;
+                }
             }
 
             .auction-status-details {
@@ -80,16 +86,25 @@
                 width: 100%;
             }
 
-            &.status-closed > .auction-status-label {
-                background-color: @warning;
+            &.status-closed {
+                
                 border-color: @warning;
+                background-color: fade(@warning, 5%);
+                
+                > .auction-status-label {
+                    background-color: @warning;
+                    
+                }
             }
 
             &.status-live {
                 
+                border-color: @success;
+                background-color: fade(@success, 5%);
+
                 > .auction-status-label {
                     background-color: @success;
-                    border-color: @success;
+                    
                 }
 
                 > .auction-status-details {
@@ -98,9 +113,16 @@
 
             }
 
-            &.status-upcoming > .auction-status-label {
-                background-color: @warning;
+            &.status-upcoming {
+                
                 border-color: @warning;
+                background-color: fade(@warning, 5%);
+                
+                > .auction-status-label {
+                    background-color: @warning;
+                    
+                }
+
             }
         }
 
