MZ-50 changed "no avatars" message

--- a/src/Mzayad.Web/Areas/admin/Views/Avatars/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Avatars/Index.cshtml
@@ -12,7 +12,7 @@
 
 @if (!Model.Any())
 {
-    @Html.StatusMessage("no avatar to display.", StatusMessageType.Warning)
+    @Html.StatusMessage("There are currently no avatars uploaded.", StatusMessageType.Warning)
 
     return;
 }
