--- a/src/Mzayad.Web/Areas/admin/Views/Avatars/Add.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Avatars/Add.cshtml
@@ -22,14 +22,10 @@
             </section>
 
             <section class="form-buttons">
-                <button type="submit" class="btn btn-default">Save</button>
+                <button type="submit" class="btn btn-default">Upload</button>
             </section>
 
 
         }
     </div>
 </div>
-
-@section scripts {
-    @Scripts.Render("~/js/validate")
-}
